; ModuleID = '/home/carl/AnghaBench/jerryscript/jerry-core/vm/extr_opcodes-ecma-relational-equality.c_opfunc_in.c'
source_filename = "/home/carl/AnghaBench/jerryscript/jerry-core/vm/extr_opcodes-ecma-relational-equality.c_opfunc_in.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [34 x i8] c"Expected an object in 'in' check.\00", align 1
@ECMA_VALUE_ERROR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @opfunc_in(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @ecma_is_value_object(i32 %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %15, label %12

12:                                               ; preds = %2
  %13 = call i32 @ECMA_ERR_MSG(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0))
  %14 = call i32 @ecma_raise_type_error(i32 %13)
  store i32 %14, i32* %3, align 4
  br label %35

15:                                               ; preds = %2
  %16 = load i32, i32* %4, align 4
  %17 = call i32* @ecma_op_to_prop_name(i32 %16)
  store i32* %17, i32** %6, align 8
  %18 = load i32*, i32** %6, align 8
  %19 = icmp eq i32* %18, null
  %20 = zext i1 %19 to i32
  %21 = call i64 @JERRY_UNLIKELY(i32 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %15
  %24 = load i32, i32* @ECMA_VALUE_ERROR, align 4
  store i32 %24, i32* %3, align 4
  br label %35

25:                                               ; preds = %15
  %26 = load i32, i32* %5, align 4
  %27 = call i32* @ecma_get_object_from_value(i32 %26)
  store i32* %27, i32** %7, align 8
  %28 = load i32*, i32** %7, align 8
  %29 = load i32*, i32** %6, align 8
  %30 = call i32 @ecma_op_object_has_property(i32* %28, i32* %29)
  %31 = call i32 @ecma_make_boolean_value(i32 %30)
  store i32 %31, i32* %8, align 4
  %32 = load i32*, i32** %6, align 8
  %33 = call i32 @ecma_deref_ecma_string(i32* %32)
  %34 = load i32, i32* %8, align 4
  store i32 %34, i32* %3, align 4
  br label %35

35:                                               ; preds = %25, %23, %12
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}

declare dso_local i32 @ecma_is_value_object(i32) #1

declare dso_local i32 @ecma_raise_type_error(i32) #1

declare dso_local i32 @ECMA_ERR_MSG(i8*) #1

declare dso_local i32* @ecma_op_to_prop_name(i32) #1

declare dso_local i64 @JERRY_UNLIKELY(i32) #1

declare dso_local i32* @ecma_get_object_from_value(i32) #1

declare dso_local i32 @ecma_make_boolean_value(i32) #1

declare dso_local i32 @ecma_op_object_has_property(i32*, i32*) #1

declare dso_local i32 @ecma_deref_ecma_string(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
